# bike-simulation

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md  decisions.md  ecology-tick-refactor.md  gap-analysis.md  ground-cover-and-spatial-climate.md  next-session-spec.md  next-steps.md  rider-first-roadmap.md  roadmap.md  seasonal-redesign-spec.md  simulation-design.md  speciation-design-exploration.md  testing-roadmap.md
godot/: main.gd  main.tscn  project.godot
godot/scripts/: asset_mesh_builder.gd  asset_mesh_builder.gd.uid  camera_mover.gd  camera_mover.gd.uid  chunk_format_loader.gd  chunk_format_loader.gd.uid  chunk_resource.gd  chunk_resource.gd.uid  chunk_streamer.gd  chunk_streamer.gd.uid  game_state.gd  game_state.gd.uid  hardware_input.gd  hardware_input.gd.uid  (+6 more)
scenarios/: blight.yaml  climate_cycle.yaml  fire_large.yaml  graded_burn.yaml  warm_drought.yaml
scripts/: diagnose_contraction.py  diagnose_suitability.py  run_calibration.py  test_ecology.py
tests/: conftest.py  test_climate_hydrology.py  test_debug_visualizer.py  test_ecology.py  test_ecology_advanced.py  test_ecology_modifiers.py  test_erosion.py  test_event_store.py  test_genome.py  test_geology.py  test_godot_extractor.py  test_individual_lifecycle.py  test_orchestrator.py  test_query_expanded.py  test_raster_store.py  test_ride_experience.py  test_rng.py  test_seasonal_ecology.py  test_seasonal_erosion.py  test_tick_summary.py  test_timeline_api.py  test_versioning.py  test_weather.py  test_webview.py  test_world.py  test_world_io.py  test_world_query.py
(+48 files in other folders)
