[project]
name = "bike-sim"
version = "0.1.0"
description = "A world simulation traversed by pedaling a bike trainer"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "matplotlib>=3.8",
    "numpy>=2.0",
    "pillow>=10.0",
    "zarr>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bike_sim"]

[tool.ruff]
src = ["src"]
line-length = 99

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modern Python idioms)
    "B",   # flake8-bugbear (common gotchas)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (skipped by default, use --run-slow to include)",
]
